--- a/relatorio/projeto_modelos.tex
+++ b/relatorio/projeto_modelos.tex
@@ -75,7 +75,7 @@
   <rfpcs1@iscte-iul.pt>
   \vspace{30pt}
 }
-\date{21/12/2022 \\ Versão 1.0.0} % 
+\date{21/12/2022 \\ Versão 1.0.1} % 
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 \thispagestyle{empty}
@@ -502,13 +502,13 @@ O gráfico de correlações não mostra também nenhuma correlação significant
 \hline
 isHotel & isPrivateRoom & isSharedRoom & n & freq & averagePrice\\
 \hline
-\cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{4242} & \cellcolor{gray!6}{0.4439096} & \cellcolor{gray!6}{267.4215}\\
+\cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{4242} & \cellcolor{gray!6}{0.4439096} & \cellcolor{gray!6}{280.8885}\\
 \hline
-0 & 0 & 1 & 1539 & 0.1610506 & 249.3223\\
+0 & 0 & 1 & 1539 & 0.1610506 & 219.5776\\
 \hline
-\cellcolor{gray!6}{0} & \cellcolor{gray!6}{1} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{2236} & \cellcolor{gray!6}{0.2339891} & \cellcolor{gray!6}{327.2849}\\
+\cellcolor{gray!6}{0} & \cellcolor{gray!6}{1} & \cellcolor{gray!6}{0} & \cellcolor{gray!6}{2236} & \cellcolor{gray!6}{0.2339891} & \cellcolor{gray!6}{331.7384}\\
 \hline
-1 & 0 & 0 & 1539 & 0.1610506 & 271.0097\\
+1 & 0 & 0 & 1539 & 0.1610506 & 274.3223\\
 \hline
 \end{tabular}
 \endgroup{}
@@ -561,17 +561,17 @@ O nosso primeiro modelo linear foi um modelo que diretamente relaciona as variá
 \hline
 Model & fit0(price \textasciitilde{} .)\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0412}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0395}\\
 \hline
-AIC & 1.6e+05\\
+AIC & 1.59e+05\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{1.72}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{1.56}\\
 \hline
-rRMSE & 0.0376\\
+rRMSE & 0.0363\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 9.03e-38}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 3.76e-38}\\
 \hline
-Breusch-Godfrey & p = 0.00189\\
+Breusch-Godfrey & p > 0.05\\
 \hline
 \cellcolor{gray!6}{Jarque-Bera} & \cellcolor{gray!6}{p < 0.05}\\
 \hline
@@ -617,17 +617,17 @@ O primeiro modelo notavelmente não é apropriado, devido ao valor gigante de \t
 \hline
 Model & cube & squared & root & log & invSqrt & inv & invSqdr & invCube\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0266} & \cellcolor{gray!6}{0.0294} & \cellcolor{gray!6}{0.131} & \cellcolor{gray!6}{0.38} & \cellcolor{gray!6}{0.532} & \cellcolor{gray!6}{0.595} & \cellcolor{gray!6}{0.604} & \cellcolor{gray!6}{0.563}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.0267} & \cellcolor{gray!6}{0.0295} & \cellcolor{gray!6}{0.131} & \cellcolor{gray!6}{0.383} & \cellcolor{gray!6}{0.536} & \cellcolor{gray!6}{0.599} & \cellcolor{gray!6}{0.604} & \cellcolor{gray!6}{0.561}\\
 \hline
-AIC & 5.39e+05 & 3.48e+05 & 6.86e+04 & 1.94e+04 & -4.43e+04 & -7.55e+04 & -1.41e+05 & -2.06e+05\\
+AIC & 5.34e+05 & 3.45e+05 & 6.87e+04 & 1.92e+04 & -4.47e+04 & -7.6e+04 & -1.42e+05 & -2.06e+05\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{108297} & \cellcolor{gray!6}{292} & \cellcolor{gray!6}{0.282} & \cellcolor{gray!6}{0.0891} & \cellcolor{gray!6}{0.296} & \cellcolor{gray!6}{1.49} & \cellcolor{gray!6}{199} & \cellcolor{gray!6}{57299}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{85369} & \cellcolor{gray!6}{244} & \cellcolor{gray!6}{0.275} & \cellcolor{gray!6}{0.0878} & \cellcolor{gray!6}{0.291} & \cellcolor{gray!6}{1.41} & \cellcolor{gray!6}{169} & \cellcolor{gray!6}{49425}\\
 \hline
-rRMSE & 0.221 & 0.167 & 0.00647 & 0.00135 & 0.00278 & 0.00537 & 0.0117 & 0.0188\\
+rRMSE & 0.206 & 0.155 & 0.00644 & 0.00133 & 0.00275 & 0.00533 & 0.0118 & 0.0194\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 1.47e-27} & \cellcolor{gray!6}{p = 1.33e-30} & \cellcolor{gray!6}{p = 7.32e-54} & \cellcolor{gray!6}{p = 1.88e-116} & \cellcolor{gray!6}{p = 6.12e-229} & \cellcolor{gray!6}{p = 1.5e-298} & \cellcolor{gray!6}{p = 0} & \cellcolor{gray!6}{p = 3.79e-272}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.99e-18} & \cellcolor{gray!6}{p = 5.04e-28} & \cellcolor{gray!6}{p = 6.24e-48} & \cellcolor{gray!6}{p = 1.47e-94} & \cellcolor{gray!6}{p = 1.12e-203} & \cellcolor{gray!6}{p = 2.88e-281} & \cellcolor{gray!6}{p = 0} & \cellcolor{gray!6}{p = 0}\\
 \hline
-Breusch-Godfrey & p = 0.00341 & p = 0.000314 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
+Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p = 0.0212\\
 \hline
 \cellcolor{gray!6}{Jarque-Bera} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05}\\
 \hline
@@ -670,17 +670,17 @@ O conjunto de treino usou o mesmo método de \textit{oversampling} usado anterio
 \hline
 Model & log & invSqrt & logOut & invSqrtOut\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.38} & \cellcolor{gray!6}{0.532} & \cellcolor{gray!6}{0.387} & \cellcolor{gray!6}{0.514}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.383} & \cellcolor{gray!6}{0.536} & \cellcolor{gray!6}{0.405} & \cellcolor{gray!6}{0.517}\\
 \hline
-AIC & 1.94e+04 & -4.43e+04 & 1.61e+04 & -3.84e+04\\
+AIC & 1.92e+04 & -4.47e+04 & 1.56e+04 & -3.84e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0891} & \cellcolor{gray!6}{0.296} & \cellcolor{gray!6}{0.0932} & \cellcolor{gray!6}{0.288}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0878} & \cellcolor{gray!6}{0.291} & \cellcolor{gray!6}{0.0921} & \cellcolor{gray!6}{0.292}\\
 \hline
-rRMSE & 0.00135 & 0.00278 & 0.00353 & 0.00761\\
+rRMSE & 0.00133 & 0.00275 & 0.00352 & 0.00762\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 1.88e-116} & \cellcolor{gray!6}{p = 6.12e-229} & \cellcolor{gray!6}{p = 3.63e-111} & \cellcolor{gray!6}{p = 1.28e-256}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 1.47e-94} & \cellcolor{gray!6}{p = 1.12e-203} & \cellcolor{gray!6}{p = 3.29e-91} & \cellcolor{gray!6}{p = 2.98e-240}\\
 \hline
-Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
+Breusch-Godfrey & p > 0.05 & p > 0.05 & p = 0.0333 & p = 0.000898\\
 \hline
 \cellcolor{gray!6}{Jarque-Bera} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05} & \cellcolor{gray!6}{p < 0.05}\\
 \hline
@@ -731,15 +731,15 @@ Ao analisar os gráficos, apenas o gráfico dos resíduos parcial da variável \
 \hline
 Model & noMN & withMN & MNsq\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.359} & \cellcolor{gray!6}{0.38} & \cellcolor{gray!6}{0.412}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.36} & \cellcolor{gray!6}{0.383} & \cellcolor{gray!6}{0.418}\\
 \hline
-AIC & 1.97e+04 & 1.94e+04 & 1.89e+04\\
+AIC & 1.96e+04 & 1.92e+04 & 1.87e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0916} & \cellcolor{gray!6}{0.0891} & \cellcolor{gray!6}{0.085}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0906} & \cellcolor{gray!6}{0.0878} & \cellcolor{gray!6}{0.0837}\\
 \hline
-rRMSE & 0.00137 & 0.00135 & 0.00131\\
+rRMSE & 0.00136 & 0.00133 & 0.0013\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 8.32e-122} & \cellcolor{gray!6}{p = 1.88e-116} & \cellcolor{gray!6}{p = 6.11e-124}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 5.47e-102} & \cellcolor{gray!6}{p = 1.47e-94} & \cellcolor{gray!6}{p = 2.62e-97}\\
 \hline
 Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05\\
 \hline
@@ -779,15 +779,15 @@ De forma a resolver a heterocedasticidade, vamos usar o método de \textit{weigh
 \hline
 Model & noW & sqdrN & rootN & rootPred & sqdrPred\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.412} & \cellcolor{gray!6}{0.929} & \cellcolor{gray!6}{0.374} & \cellcolor{gray!6}{0.421} & \cellcolor{gray!6}{0.449}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.418} & \cellcolor{gray!6}{0.949} & \cellcolor{gray!6}{0.361} & \cellcolor{gray!6}{0.427} & \cellcolor{gray!6}{0.454}\\
 \hline
-AIC & 1.89e+04 & 5.98e+04 & 1.99e+04 & 1.9e+04 & 1.93e+04\\
+AIC & 1.87e+04 & 5.8e+04 & 1.97e+04 & 1.87e+04 & 1.91e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.085} & \cellcolor{gray!6}{0.129} & \cellcolor{gray!6}{0.0869} & \cellcolor{gray!6}{0.085} & \cellcolor{gray!6}{0.0854}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.0837} & \cellcolor{gray!6}{0.114} & \cellcolor{gray!6}{0.0856} & \cellcolor{gray!6}{0.0837} & \cellcolor{gray!6}{0.084}\\
 \hline
-rRMSE & 0.00131 & 0.00176 & 0.00133 & 0.00131 & 0.00132\\
+rRMSE & 0.0013 & 0.00164 & 0.00131 & 0.0013 & 0.0013\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 6.11e-124} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p = 1.12e-63} & \cellcolor{gray!6}{p = 0.0488}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p = 2.62e-97} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p = 1.66e-51} & \cellcolor{gray!6}{p > 0.05}\\
 \hline
 Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
 \hline
@@ -843,15 +843,15 @@ O gráfico de resíduos não mostra tendência, nem heterocedasticidade evidente
 \hline
 Model & sqdrN & sqdrNOut & rootN & rootNOut & sqdrPred & sqdrPredOut\\
 \hline
-\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.929} & \cellcolor{gray!6}{0.973} & \cellcolor{gray!6}{0.374} & \cellcolor{gray!6}{0.378} & \cellcolor{gray!6}{0.449} & \cellcolor{gray!6}{0.468}\\
+\cellcolor{gray!6}{R2} & \cellcolor{gray!6}{0.949} & \cellcolor{gray!6}{0.925} & \cellcolor{gray!6}{0.361} & \cellcolor{gray!6}{0.391} & \cellcolor{gray!6}{0.454} & \cellcolor{gray!6}{0.481}\\
 \hline
-AIC & 5.98e+04 & 5.15e+04 & 1.99e+04 & 1.65e+04 & 1.93e+04 & 1.56e+04\\
+AIC & 5.8e+04 & 5.1e+04 & 1.97e+04 & 1.65e+04 & 1.91e+04 & 1.51e+04\\
 \hline
-\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.129} & \cellcolor{gray!6}{0.109} & \cellcolor{gray!6}{0.0869} & \cellcolor{gray!6}{0.0854} & \cellcolor{gray!6}{0.0854} & \cellcolor{gray!6}{0.0875}\\
+\cellcolor{gray!6}{MAPE} & \cellcolor{gray!6}{0.114} & \cellcolor{gray!6}{0.106} & \cellcolor{gray!6}{0.0856} & \cellcolor{gray!6}{0.0849} & \cellcolor{gray!6}{0.084} & \cellcolor{gray!6}{0.0864}\\
 \hline
-rRMSE & 0.00176 & 0.00402 & 0.00133 & 0.00332 & 0.00132 & 0.00339\\
+rRMSE & 0.00164 & 0.00398 & 0.00131 & 0.00331 & 0.0013 & 0.00337\\
 \hline
-\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p = 0.0488} & \cellcolor{gray!6}{p > 0.05}\\
+\cellcolor{gray!6}{Breusch-Pagan} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05} & \cellcolor{gray!6}{p > 0.05}\\
 \hline
 Breusch-Godfrey & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05 & p > 0.05\\
 \hline
@@ -883,97 +883,97 @@ Os coeficientes do modelo são apresentados na tabela seguinte.\\
 \hline
 term & estimate & std.error & statistic & p.value\\
 \hline
-\cellcolor{gray!6}{(Intercept)} & \cellcolor{gray!6}{8.77e+01} & \cellcolor{gray!6}{134.462} & \cellcolor{gray!6}{0.653} & \cellcolor{gray!6}{5.14e-01}\\
+\cellcolor{gray!6}{(Intercept)} & \cellcolor{gray!6}{1.01e+02} & \cellcolor{gray!6}{138.523} & \cellcolor{gray!6}{0.730} & \cellcolor{gray!6}{4.65e-01}\\
 \hline
-latitude & 1.08e+01 & 1.328 & 8.161 & 3.74e-16\\
+latitude & 1.15e+01 & 1.338 & 8.571 & 1.19e-17\\
 \hline
-\cellcolor{gray!6}{longitude} & \cellcolor{gray!6}{4.01e+00} & \cellcolor{gray!6}{0.959} & \cellcolor{gray!6}{4.184} & \cellcolor{gray!6}{2.88e-05}\\
+\cellcolor{gray!6}{longitude} & \cellcolor{gray!6}{4.32e+00} & \cellcolor{gray!6}{0.983} & \cellcolor{gray!6}{4.389} & \cellcolor{gray!6}{1.15e-05}\\
 \hline
-minimum\_nights & -1.63e-02 & 0.001 & -30.711 & 1.45e-197\\
+minimum\_nights & -1.81e-02 & 0.001 & -32.988 & 4.75e-226\\
 \hline
-\cellcolor{gray!6}{number\_of\_reviews} & \cellcolor{gray!6}{-1.30e-03} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-16.993} & \cellcolor{gray!6}{8.12e-64}\\
+\cellcolor{gray!6}{number\_of\_reviews} & \cellcolor{gray!6}{-1.25e-03} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-16.997} & \cellcolor{gray!6}{7.50e-64}\\
 \hline
-calculated\_host\_listings\_count & -3.14e-03 & 0.000 & -14.160 & 4.67e-45\\
+calculated\_host\_listings\_count & -2.98e-03 & 0.000 & -13.090 & 8.18e-39\\
 \hline
-\cellcolor{gray!6}{availability\_365} & \cellcolor{gray!6}{-2.36e-04} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-4.498} & \cellcolor{gray!6}{6.96e-06}\\
+\cellcolor{gray!6}{availability\_365} & \cellcolor{gray!6}{-8.74e-06} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{-0.171} & \cellcolor{gray!6}{8.64e-01}\\
 \hline
-neighbourhood\_Bernal.Heights & 4.15e-02 & 0.061 & 0.677 & 4.99e-01\\
+neighbourhood\_Bernal.Heights & 1.50e-01 & 0.067 & 2.242 & 2.50e-02\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Castro.Upper.Market} & \cellcolor{gray!6}{1.55e-01} & \cellcolor{gray!6}{0.087} & \cellcolor{gray!6}{1.781} & \cellcolor{gray!6}{7.50e-02}\\
+\cellcolor{gray!6}{neighbourhood\_Castro.Upper.Market} & \cellcolor{gray!6}{3.48e-01} & \cellcolor{gray!6}{0.090} & \cellcolor{gray!6}{3.863} & \cellcolor{gray!6}{1.13e-04}\\
 \hline
-neighbourhood\_Chinatown & -6.38e-01 & 0.111 & -5.748 & 9.31e-09\\
+neighbourhood\_Chinatown & -4.26e-01 & 0.110 & -3.882 & 1.04e-04\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Crocker.Amazon} & \cellcolor{gray!6}{2.45e-01} & \cellcolor{gray!6}{0.101} & \cellcolor{gray!6}{2.433} & \cellcolor{gray!6}{1.50e-02}\\
+\cellcolor{gray!6}{neighbourhood\_Crocker.Amazon} & \cellcolor{gray!6}{4.80e-01} & \cellcolor{gray!6}{0.095} & \cellcolor{gray!6}{5.056} & \cellcolor{gray!6}{4.36e-07}\\
 \hline
-neighbourhood\_Diamond.Heights & 3.00e-01 & 0.156 & 1.929 & 5.38e-02\\
+neighbourhood\_Diamond.Heights & 4.98e-01 & 0.219 & 2.277 & 2.28e-02\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Downtown.Civic.Center} & \cellcolor{gray!6}{-4.94e-01} & \cellcolor{gray!6}{0.094} & \cellcolor{gray!6}{-5.245} & \cellcolor{gray!6}{1.59e-07}\\
+\cellcolor{gray!6}{neighbourhood\_Downtown.Civic.Center} & \cellcolor{gray!6}{-3.23e-01} & \cellcolor{gray!6}{0.097} & \cellcolor{gray!6}{-3.319} & \cellcolor{gray!6}{9.07e-04}\\
 \hline
-neighbourhood\_Excelsior & 2.12e-02 & 0.072 & 0.293 & 7.69e-01\\
+neighbourhood\_Excelsior & 8.15e-02 & 0.082 & 0.998 & 3.18e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Financial.District} & \cellcolor{gray!6}{-1.04e-01} & \cellcolor{gray!6}{0.102} & \cellcolor{gray!6}{-1.021} & \cellcolor{gray!6}{3.07e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Financial.District} & \cellcolor{gray!6}{2.20e-02} & \cellcolor{gray!6}{0.104} & \cellcolor{gray!6}{0.211} & \cellcolor{gray!6}{8.33e-01}\\
 \hline
-neighbourhood\_Glen.Park & 3.23e-01 & 0.093 & 3.457 & 5.49e-04\\
+neighbourhood\_Glen.Park & 4.17e-01 & 0.093 & 4.499 & 6.91e-06\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Haight.Ashbury} & \cellcolor{gray!6}{3.51e-02} & \cellcolor{gray!6}{0.099} & \cellcolor{gray!6}{0.355} & \cellcolor{gray!6}{7.23e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Haight.Ashbury} & \cellcolor{gray!6}{2.99e-01} & \cellcolor{gray!6}{0.101} & \cellcolor{gray!6}{2.950} & \cellcolor{gray!6}{3.19e-03}\\
 \hline
-neighbourhood\_Inner.Richmond & -1.47e-01 & 0.125 & -1.173 & 2.41e-01\\
+neighbourhood\_Inner.Richmond & 4.25e-03 & 0.126 & 0.034 & 9.73e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Inner.Sunset} & \cellcolor{gray!6}{-1.81e-01} & \cellcolor{gray!6}{0.112} & \cellcolor{gray!6}{-1.619} & \cellcolor{gray!6}{1.05e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Inner.Sunset} & \cellcolor{gray!6}{1.81e-01} & \cellcolor{gray!6}{0.113} & \cellcolor{gray!6}{1.599} & \cellcolor{gray!6}{1.10e-01}\\
 \hline
-neighbourhood\_Lakeshore & 2.53e-01 & 0.112 & 2.250 & 2.45e-02\\
+neighbourhood\_Lakeshore & 4.17e-01 & 0.116 & 3.606 & 3.13e-04\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Marina} & \cellcolor{gray!6}{-2.04e-01} & \cellcolor{gray!6}{0.125} & \cellcolor{gray!6}{-1.625} & \cellcolor{gray!6}{1.04e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Marina} & \cellcolor{gray!6}{-1.42e-01} & \cellcolor{gray!6}{0.127} & \cellcolor{gray!6}{-1.116} & \cellcolor{gray!6}{2.64e-01}\\
 \hline
-neighbourhood\_Mission & -1.64e-01 & 0.072 & -2.285 & 2.23e-02\\
+neighbourhood\_Mission & 1.39e-02 & 0.075 & 0.185 & 8.53e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Nob.Hill} & \cellcolor{gray!6}{-1.65e-01} & \cellcolor{gray!6}{0.103} & \cellcolor{gray!6}{-1.600} & \cellcolor{gray!6}{1.10e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Nob.Hill} & \cellcolor{gray!6}{-6.24e-02} & \cellcolor{gray!6}{0.105} & \cellcolor{gray!6}{-0.592} & \cellcolor{gray!6}{5.54e-01}\\
 \hline
-neighbourhood\_Noe.Valley & 1.35e-01 & 0.078 & 1.730 & 8.36e-02\\
+neighbourhood\_Noe.Valley & 3.59e-01 & 0.082 & 4.388 & 1.16e-05\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_North.Beach} & \cellcolor{gray!6}{1.12e-01} & \cellcolor{gray!6}{0.118} & \cellcolor{gray!6}{0.951} & \cellcolor{gray!6}{3.42e-01}\\
+\cellcolor{gray!6}{neighbourhood\_North.Beach} & \cellcolor{gray!6}{-5.03e-02} & \cellcolor{gray!6}{0.120} & \cellcolor{gray!6}{-0.419} & \cellcolor{gray!6}{6.75e-01}\\
 \hline
-neighbourhood\_Ocean.View & 1.77e-01 & 0.092 & 1.929 & 5.38e-02\\
+neighbourhood\_Ocean.View & 4.76e-01 & 0.097 & 4.919 & 8.85e-07\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Outer.Mission} & \cellcolor{gray!6}{-6.96e-02} & \cellcolor{gray!6}{0.084} & \cellcolor{gray!6}{-0.833} & \cellcolor{gray!6}{4.05e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Outer.Mission} & \cellcolor{gray!6}{1.85e-01} & \cellcolor{gray!6}{0.088} & \cellcolor{gray!6}{2.104} & \cellcolor{gray!6}{3.54e-02}\\
 \hline
-neighbourhood\_Outer.Richmond & -9.23e-02 & 0.142 & -0.649 & 5.16e-01\\
+neighbourhood\_Outer.Richmond & 3.52e-02 & 0.147 & 0.240 & 8.10e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Outer.Sunset} & \cellcolor{gray!6}{-2.96e-02} & \cellcolor{gray!6}{0.127} & \cellcolor{gray!6}{-0.233} & \cellcolor{gray!6}{8.16e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Outer.Sunset} & \cellcolor{gray!6}{2.18e-01} & \cellcolor{gray!6}{0.129} & \cellcolor{gray!6}{1.690} & \cellcolor{gray!6}{9.10e-02}\\
 \hline
-neighbourhood\_Pacific.Heights & -1.57e-01 & 0.116 & -1.354 & 1.76e-01\\
+neighbourhood\_Pacific.Heights & 3.36e-02 & 0.119 & 0.283 & 7.77e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Parkside} & \cellcolor{gray!6}{1.06e-01} & \cellcolor{gray!6}{0.119} & \cellcolor{gray!6}{0.894} & \cellcolor{gray!6}{3.72e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Parkside} & \cellcolor{gray!6}{2.91e-01} & \cellcolor{gray!6}{0.122} & \cellcolor{gray!6}{2.393} & \cellcolor{gray!6}{1.67e-02}\\
 \hline
-neighbourhood\_Potrero.Hill & -5.64e-02 & 0.075 & -0.756 & 4.50e-01\\
+neighbourhood\_Potrero.Hill & 1.16e-01 & 0.077 & 1.512 & 1.31e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Presidio} & \cellcolor{gray!6}{-1.45e-01} & \cellcolor{gray!6}{0.303} & \cellcolor{gray!6}{-0.477} & \cellcolor{gray!6}{6.33e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Presidio} & \cellcolor{gray!6}{3.14e-01} & \cellcolor{gray!6}{0.268} & \cellcolor{gray!6}{1.173} & \cellcolor{gray!6}{2.41e-01}\\
 \hline
-neighbourhood\_Presidio.Heights & -1.34e-01 & 0.145 & -0.925 & 3.55e-01\\
+neighbourhood\_Presidio.Heights & -1.97e-01 & 0.192 & -1.029 & 3.03e-01\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Russian.Hill} & \cellcolor{gray!6}{-2.91e-01} & \cellcolor{gray!6}{0.121} & \cellcolor{gray!6}{-2.411} & \cellcolor{gray!6}{1.59e-02}\\
+\cellcolor{gray!6}{neighbourhood\_Russian.Hill} & \cellcolor{gray!6}{-1.56e-01} & \cellcolor{gray!6}{0.125} & \cellcolor{gray!6}{-1.254} & \cellcolor{gray!6}{2.10e-01}\\
 \hline
-neighbourhood\_Seacliff & 1.31e-01 & 0.275 & 0.476 & 6.34e-01\\
+neighbourhood\_Seacliff & 8.77e-01 & 0.468 & 1.872 & 6.12e-02\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_South.of.Market} & \cellcolor{gray!6}{-2.59e-01} & \cellcolor{gray!6}{0.084} & \cellcolor{gray!6}{-3.068} & \cellcolor{gray!6}{2.16e-03}\\
+\cellcolor{gray!6}{neighbourhood\_South.of.Market} & \cellcolor{gray!6}{-1.50e-01} & \cellcolor{gray!6}{0.087} & \cellcolor{gray!6}{-1.729} & \cellcolor{gray!6}{8.38e-02}\\
 \hline
-neighbourhood\_Twin.Peaks & 4.05e-01 & 0.105 & 3.859 & 1.15e-04\\
+neighbourhood\_Twin.Peaks & 5.95e-01 & 0.109 & 5.471 & 4.58e-08\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Visitacion.Valley} & \cellcolor{gray!6}{2.58e-02} & \cellcolor{gray!6}{0.087} & \cellcolor{gray!6}{0.295} & \cellcolor{gray!6}{7.68e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Visitacion.Valley} & \cellcolor{gray!6}{1.37e-01} & \cellcolor{gray!6}{0.092} & \cellcolor{gray!6}{1.490} & \cellcolor{gray!6}{1.36e-01}\\
 \hline
-neighbourhood\_West.of.Twin.Peaks & 8.95e-02 & 0.103 & 0.872 & 3.83e-01\\
+neighbourhood\_West.of.Twin.Peaks & 2.75e-01 & 0.105 & 2.612 & 9.00e-03\\
 \hline
-\cellcolor{gray!6}{neighbourhood\_Western.Addition} & \cellcolor{gray!6}{-9.34e-02} & \cellcolor{gray!6}{0.098} & \cellcolor{gray!6}{-0.956} & \cellcolor{gray!6}{3.39e-01}\\
+\cellcolor{gray!6}{neighbourhood\_Western.Addition} & \cellcolor{gray!6}{7.06e-02} & \cellcolor{gray!6}{0.101} & \cellcolor{gray!6}{0.698} & \cellcolor{gray!6}{4.85e-01}\\
 \hline
-room\_type\_Hotel.room & -2.47e-01 & 0.025 & -9.919 & 4.44e-23\\
+room\_type\_Hotel.room & -2.72e-01 & 0.024 & -11.105 & 1.78e-28\\
 \hline
-\cellcolor{gray!6}{room\_type\_Private.room} & \cellcolor{gray!6}{-5.86e-01} & \cellcolor{gray!6}{0.019} & \cellcolor{gray!6}{-30.317} & \cellcolor{gray!6}{8.36e-193}\\
+\cellcolor{gray!6}{room\_type\_Private.room} & \cellcolor{gray!6}{-5.82e-01} & \cellcolor{gray!6}{0.019} & \cellcolor{gray!6}{-30.194} & \cellcolor{gray!6}{2.49e-191}\\
 \hline
-room\_type\_Shared.room & -1.13e+00 & 0.027 & -42.194 & 0.00e+00\\
+room\_type\_Shared.room & -1.17e+00 & 0.026 & -44.577 & 0.00e+00\\
 \hline
-\cellcolor{gray!6}{mnsqd} & \cellcolor{gray!6}{5.29e-05} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{26.108} & \cellcolor{gray!6}{3.52e-145}\\
+\cellcolor{gray!6}{mnsqd} & \cellcolor{gray!6}{6.08e-05} & \cellcolor{gray!6}{0.000} & \cellcolor{gray!6}{27.740} & \cellcolor{gray!6}{6.21e-163}\\
 \hline
-mncube & -3.54e-08 & 0.000 & -23.277 & 1.32e-116\\
+mncube & -4.42e-08 & 0.000 & -24.276 & 2.35e-126\\
 \hline
 \end{tabular}
 \endgroup{}
